Completed week 3 assessment.

--- a/react-debugging.html
+++ b/react-debugging.html
@@ -63,8 +63,9 @@
           // No need to change anything ABOVE this line ^
 
           return(
+            <>
               <h1>Draw a Card</h1>
-              <button onClick={}>
+              <button onClick={draw}>
                 Click to Draw a Card
               </button>
               <button onClick={shuffle}>
@@ -79,10 +80,10 @@
                   )
                 })}
               </div>
-          )
+              </>
+            )
+          }
         }
-      }
-
       // No need to change anything below this line
       const domContainer = document.querySelector('#react-container')
       ReactDOM.render(<App />, domContainer)
